@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.122 2009-04-21 20:54:18 nicm Exp $
+# $Id: Makefile,v 1.123 2009-04-27 13:21:15 tcunha Exp $
 
 .SUFFIXES: .c .o .y .h
 .PHONY: clean update-index.html upload-index.html
@@ -41,7 +41,7 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-up-pane.c cmd-down-pane.c cmd-choose-window.c cmd-choose-session.c \
       cmd-suspend-client.c cmd-find-window.c cmd-load-buffer.c \
       cmd-copy-buffer.c cmd-break-pane.c cmd-swap-pane.c cmd-next-layout.c \
-      cmd-rotate-window.c \
+      cmd-rotate-window.c cmd-confirm-before.c \
       window-clock.c window-scroll.c window-more.c window-copy.c \
       window-choose.c \
       options.c options-cmd.c paste.c colour.c utf8.c clock.c \
